Trivial fix package.json

--- a/package.json
+++ b/package.json
@@ -22,12 +22,23 @@
     "testing": "npm run clean && npm-run-all --parallel testing:build testing:mocha",
     "testing:build": "npm run build:babel -- --watch --source-maps-inline",
     "testing:mocha": "npm run test:mocha -- --watch --growl",
-
     "test-task:env-check": "node test/tasks/env-check.js",
     "test-task:append-a": "node test/tasks/append.js a",
     "test-task:append-b": "node test/tasks/append.js b",
     "test-task:error": "node test/tasks/error.js",
     "test-task:stdio": "node test/tasks/stdio.js"
+  },
+  "dependencies": {
+    "minimist": "^1.1.1"
+  },
+  "devDependencies": {
+    "babel": "^4.7.16",
+    "eslint": "^0.18.0",
+    "espower-babel": "^1.4.1",
+    "mocha": "^2.2.1",
+    "npm-run-all": "1.0.0",
+    "power-assert": "^0.10.2",
+    "rimraf": "^2.3.2"
   },
   "repository": {
     "type": "git",
@@ -50,17 +61,5 @@
   "bugs": {
     "url": "https://github.com/mysticatea/npm-run-all/issues"
   },
-  "homepage": "https://github.com/mysticatea/npm-run-all",
-  "devDependencies": {
-    "babel": "^4.7.16",
-    "eslint": "^0.18.0",
-    "espower-babel": "^1.4.1",
-    "mocha": "^2.2.1",
-    "npm-run-all": "1.0.0",
-    "power-assert": "^0.10.2",
-    "rimraf": "^2.3.2"
-  },
-  "dependencies": {
-    "minimist": "^1.1.1"
-  }
+  "homepage": "https://github.com/mysticatea/npm-run-all"
 }
