Update version of "npm-run-all" in my package.json

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:babel": "babel src --out-dir lib",
     "test": "npm-run-all build test:mocha",
     "test:mocha": "mocha test/*.js --compilers js:espower-babel/guess --timeout 10000 --colors",
-    "testing": "npm run clean && npm-run-all --parallel testing:build testing:mocha",
+    "testing": "npm-run-all clean --parallel testing:build testing:mocha",
     "testing:build": "npm run build:babel -- --watch --source-maps-inline",
     "testing:mocha": "npm run test:mocha -- --watch --growl",
     "test-task:env-check": "node test/tasks/env-check.js",
@@ -27,15 +27,12 @@
     "test-task:error": "node test/tasks/error.js",
     "test-task:stdio": "node test/tasks/stdio.js"
   },
-  "dependencies": {
-    "minimist": "^1.1.1"
-  },
   "devDependencies": {
     "babel": "^4.7.16",
     "eslint": "^0.18.0",
     "espower-babel": "^1.4.1",
     "mocha": "^2.2.1",
-    "npm-run-all": "1.0.0",
+    "npm-run-all": "^1.1.0",
     "power-assert": "^0.10.2",
     "rimraf": "^2.3.2"
   },
