--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "testing": "npm-run-all clean --parallel testing:*",
     "testing:build": "npm run build:babel -- --watch --source-maps-inline",
     "testing:mocha": "npm run test:mocha -- --watch --growl",
+    "coveralls": "cat coverage/lcov.info | coveralls",
     "test-task:env-check": "node test/tasks/env-check.js",
     "test-task:append": "node test/tasks/append.js",
     "test-task:append:a": "node test/tasks/append.js a",
@@ -39,6 +40,7 @@
     "babel": "^5.1.10",
     "babel-core": "^5.1.10",
     "babel-plugin-espower": "^0.1.0",
+    "coveralls": "^2.11.2",
     "eslint": "^0.19.0",
     "istanbul": "^0.3.13",
     "mocha": "^2.2.4",
