--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint": "^0.19.0",
     "istanbul": "^0.3.13",
     "mocha": "^2.2.4",
-    "npm-run-all": "^1.2.1",
+    "npm-run-all": "1.2.2",
     "power-assert": "^0.11.0",
     "rimraf": "^2.3.2",
     "shelljs": "^0.4.0"
