--- a/package.json
+++ b/package.json
@@ -15,13 +15,9 @@
   "scripts": {
     "clean": "rimraf lib coverage",
     "lint": "eslint src",
-    "build": "npm-run-all clean lint build:babel",
-    "build:babel": "babel src --out-dir lib",
-    "test": "npm-run-all build test:mocha",
-    "test:mocha": "istanbul cover node_modules/mocha/bin/_mocha -- test/*.js --require mocha-babel-hook --timeout 30000 --colors",
-    "testing": "npm-run-all clean --parallel testing:*",
-    "testing:build": "npm run build:babel -- --watch --source-maps-inline",
-    "testing:mocha": "npm run test:mocha -- --watch --growl",
+    "build": "npm-run-all clean lint && babel src --out-dir lib",
+    "test": "npm run lint && istanbul cover node_modules/mocha/bin/_mocha -- test/*.js --require mocha-babel-hook --colors --timeout 30000",
+    "testing": "mocha test/*.js --require mocha-babel-hook --colors --timeout 30000 --watch --growl",
     "coveralls": "cat coverage/lcov.info | coveralls",
     "test-task:env-check": "node test/tasks/env-check.js",
     "test-task:append": "node test/tasks/append.js",
@@ -33,21 +29,20 @@
     "test-task:stdio": "node test/tasks/stdio.js"
   },
   "dependencies": {
-    "es6-promise": "^2.1.0",
+    "es6-promise": "^2.1.1",
     "minimatch": "^2.0.4"
   },
   "devDependencies": {
-    "babel": "^5.1.10",
-    "babel-core": "^5.1.10",
-    "babel-plugin-espower": "^0.1.0",
+    "babel": "^5.1.13",
+    "babel-core": "^5.1.13",
+    "babel-plugin-espower": "^0.2.2",
     "coveralls": "^2.11.2",
-    "eslint": "^0.19.0",
+    "eslint": "^0.20.0",
     "istanbul": "^0.3.13",
     "mocha": "^2.2.4",
-    "npm-run-all": "1.2.2",
+    "npm-run-all": "^1.2.3",
     "power-assert": "^0.11.0",
-    "rimraf": "^2.3.2",
-    "shelljs": "^0.4.0"
+    "rimraf": "^2.3.2"
   },
   "repository": {
     "type": "git",
