--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,6 @@
 {
-  "env": {
-    "node": true,
-    "es6": true
-  },
-  "ecmaFeatures": {
-    "arrowFunctions": true,
-    "binaryLiterals": true,
-    "blockBindings": true,
-    "classes": true,
-    "defaultParams": true,
-    "destructuring": true,
-    "forOf": true,
-    "generators": true,
-    "modules": true,
-    "objectLiteralComputedProperties": true,
-    "objectLiteralDuplicateProperties": true,
-    "objectLiteralShorthandMethods": true,
-    "objectLiteralShorthandProperties": true,
-    "octalLiterals": true,
-    "regexUFlag": true,
-    "regexYFlag": true,
-    "superInFunctions": true,
-    "templateStrings": true,
-    "unicodeCodePointEscapes": true,
-    "globalReturn": true
+  "extends": "mysticatea/nodejs",
+  "rules": {
+    "spaced-comment": [2, "always", {"exceptions": ["*", "-"]}]
   }
 }
