--- a/package.json
+++ b/package.json
@@ -29,20 +29,21 @@
     "test-task:stdio": "node test/tasks/stdio.js"
   },
   "dependencies": {
-    "es6-promise": "^2.1.1",
-    "minimatch": "^2.0.7"
+    "es6-promise": "^2.3.0",
+    "minimatch": "^2.0.8"
   },
   "devDependencies": {
-    "babel": "^5.4.2",
-    "babel-core": "^5.4.2",
-    "babel-plugin-espower": "^0.3.0",
+    "babel": "^5.5.8",
+    "babel-core": "^5.5.8",
+    "babel-plugin-espower": "^1.0.0",
     "coveralls": "^2.11.2",
-    "eslint": "^0.21.0",
-    "istanbul": "^0.3.14",
+    "eslint": "^0.23.0",
+    "eslint-config-mysticatea": "^0.3.0",
+    "istanbul": "^0.3.15",
     "mocha": "^2.2.5",
-    "npm-run-all": "^1.2.4",
+    "npm-run-all": "^1.2.5",
     "power-assert": "^0.11.0",
-    "rimraf": "^2.3.3"
+    "rimraf": "^2.4.0"
   },
   "repository": {
     "type": "git",
