Kill all tasks when one of tasks exited with errors.
refs #6

Because npm does not forward signals to child processes, I lookup child
processes of npm, and kill them.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": "mysticatea/nodejs",
   "rules": {
-    "spaced-comment": [2, "always", {"exceptions": ["*", "-"]}]
+    "spaced-comment": 0
   }
 }
