--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "mysticatea/nodejs"
+  "extends": "mysticatea/nodejs",
+  "rules": {
+    "operator-linebreak": [2, "after", {"overrides": {"?": "none", ":": "none"}}]
+  }
 }
