--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test": "npm run lint && istanbul cover node_modules/mocha/bin/_mocha -- test/*.js --require mocha-babel-hook --timeout 30000",
     "testing": "mocha test/*.js --require mocha-babel-hook --timeout 30000 --watch --growl",
     "coveralls": "cat coverage/lcov.info | coveralls",
+    "start": "node test/tasks/append.js start",
+    "stop": "node test/tasks/append.js stop",
     "test-task:env-check": "node test/tasks/env-check.js",
     "test-task:append": "node test/tasks/append.js",
     "test-task:append:a": "node test/tasks/append.js a",
@@ -36,13 +38,13 @@
     "which": "^1.2.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
+    "babel": "^5.8.29",
+    "babel-core": "^5.8.33",
     "babel-plugin-espower": "^1.0.0",
     "babel-plugin-unassert": "^1.2.0",
     "coveralls": "^2.11.4",
-    "eslint": "^1.7.1",
-    "eslint-config-mysticatea": "^1.7.0",
+    "eslint": "^1.8.0",
+    "eslint-config-mysticatea": "^1.8.0",
     "eslint-plugin-mysticatea": "^1.0.2",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
