--- a/test-workspace/tasks/.eslintrc
+++ b/test-workspace/tasks/.eslintrc
@@ -2,6 +2,7 @@
     "extends": "mysticatea/es5",
     "env": {"node": true},
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "no-process-exit": 0
     }
 }
