--- a/package.json
+++ b/package.json
@@ -13,35 +13,38 @@
   "scripts": {
     "preversion": "npm run build",
     "postversion": "git push && git push --tags",
-    "clean": "rimraf lib bin coverage",
+    "clean": "rimraf bin coverage docs lib",
     "lint": "eslint src test",
     "build": "babel-node src/bin/npm-run-all.js clean lint build:*",
-    "build:babel": "babel src --out-dir . --optional runtime",
+    "build:babel": "babel src --out-dir .",
     "build:esdoc": "esdoc -c esdoc.json",
-    "test": "npm run lint && babel-node node_modules/isparta/bin/isparta cover node_modules/mocha/bin/_mocha -- test/*.js --require scripts/mocha-babel-hook --timeout 12000",
-    "testing": "mocha test/*.js --require scripts/mocha-babel-hook --timeout 12000 --watch --growl",
+    "test": "npm run lint && babel-node node_modules/isparta/bin/isparta cover node_modules/mocha/bin/_mocha -- test/*.js --timeout 12000",
+    "testing": "mocha test/*.js --require babel-register --timeout 12000 --watch --growl",
     "coveralls": "cat coverage/lcov.info | coveralls"
   },
   "dependencies": {
-    "babel-runtime": "^5.8.29",
+    "babel-polyfill": "^6.2.0",
     "minimatch": "^3.0.0",
     "ps-tree": "^1.0.1",
     "shell-quote": "^1.4.3",
     "which": "^1.2.0"
   },
   "devDependencies": {
-    "babel": "^5.8.29",
-    "babel-plugin-espower": "^1.1.0",
+    "babel": "^6.1.18",
+    "babel-cli": "^6.2.0",
+    "babel-plugin-espower": "^2.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-register": "^6.2.0",
     "coveralls": "^2.11.4",
     "esdoc": "^0.4.3",
     "esdoc-importpath-plugin": "0.0.1",
-    "eslint": "^1.9.0",
-    "eslint-config-mysticatea": "^1.9.0",
-    "eslint-plugin-mysticatea": "^1.0.3",
-    "isparta": "^3.5.3",
-    "mocha": "^2.3.3",
-    "power-assert": "^1.1.0",
-    "rimraf": "^2.4.3"
+    "eslint": "^1.10.2",
+    "eslint-config-mysticatea": "^2.0.0-config-0.2.0",
+    "isparta": "^4.0.0",
+    "mocha": "^2.3.4",
+    "power-assert": "^1.2.0",
+    "rimraf": "^2.4.4"
   },
   "repository": {
     "type": "git",
