--- a/test/lib/.eslintrc
+++ b/test/lib/.eslintrc
@@ -1,6 +1,9 @@
 {
-    "extends": "mysticatea/es5",
-    "env": {"node": true},
+    "root": true,
+    "extends": [
+        "mysticatea/es5",
+        "mysticatea/node"
+    ],
     "rules": {
         "no-console": 0
     }
