Fix for babel and eslint
- Use `babel-core` instead of `babel`.
- Fix a regression of Node API (`require("npm-run-al")` was not
working).
- I forgot linting `test-workspace`.

--- a/test-workspace/tasks/.eslintrc
+++ b/test-workspace/tasks/.eslintrc
@@ -1,8 +1,12 @@
 {
-    "extends": "mysticatea/es5",
-    "env": {"node": true},
+    "root": true,
+    "extends": [
+        "mysticatea/es5",
+        "mysticatea/node"
+    ],
     "rules": {
         "no-console": 0,
+        "no-process-env": 0,
         "no-process-exit": 0
     }
 }
