--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "npm-run-all",
   "version": "1.3.2",
   "description": "A CLI tool to run multiple npm-scripts on sequential or parallel.",
-  "main": "lib/npm-run-all.js",
-  "bin": {
-    "npm-run-all": "bin/npm-run-all.js"
-  },
+  "bin": "bin/npm-run-all.js",
   "files": [
     "bin",
-    "lib"
+    "lib",
+    "index.js"
   ],
   "scripts": {
     "preversion": "npm run build",
     "postversion": "git push && git push --tags",
     "clean": "rimraf bin coverage docs lib",
-    "lint": "eslint src test",
+    "lint": "eslint src test test-workspace",
     "build": "babel-node src/bin/npm-run-all.js clean lint build:*",
     "build:babel": "babel src --out-dir .",
     "build:esdoc": "esdoc -c esdoc.json",
@@ -30,8 +28,8 @@
     "which": "^1.2.0"
   },
   "devDependencies": {
-    "babel": "^6.1.18",
     "babel-cli": "^6.2.0",
+    "babel-core": "^6.2.1",
     "babel-plugin-espower": "^2.0.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
