Pin eslint-config

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "coveralls": "^2.11.4",
     "esdoc": "^0.4.3",
     "esdoc-importpath-plugin": "0.0.1",
-    "eslint": "^1.10.2",
-    "eslint-config-mysticatea": "^2.0.0-config-0.2.2",
+    "eslint": "^1.10.3",
+    "eslint-config-mysticatea": "2.0.0-config-0.2.2",
     "isparta": "^4.0.0",
     "mocha": "^2.3.4",
     "power-assert": "^1.2.0",
