--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["es2015"],
-    "plugins": ["transform-es2015-modules-commonjs", "espower"]
+    "plugins": ["transform-runtime", "espower"]
 }
