--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "npm-run-all",
   "version": "1.4.0",
-  "description": "A CLI tool to run multiple npm-scripts on sequential or parallel.",
+  "description": "A CLI tool to run multiple npm-scripts in parallel or sequential.",
   "bin": "bin/npm-run-all.js",
   "files": [
     "bin",
@@ -21,24 +21,26 @@
     "coveralls": "cat coverage/lcov.info | coveralls"
   },
   "dependencies": {
-    "babel-polyfill": "^6.2.0",
+    "babel-runtime": "^6.3.13",
     "minimatch": "^3.0.0",
     "ps-tree": "^1.0.1",
     "shell-quote": "^1.4.3",
     "which": "^1.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.2.0",
-    "babel-core": "^6.2.1",
+    "babel-cli": "^6.4.0",
+    "babel-core": "^6.4.0",
     "babel-plugin-espower": "^2.0.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-register": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.4.3",
     "coveralls": "^2.11.4",
     "esdoc": "^0.4.3",
-    "esdoc-importpath-plugin": "0.0.1",
+    "esdoc-importpath-plugin": "^0.0.1",
     "eslint": "^1.10.3",
-    "eslint-config-mysticatea": "2.0.0-config-0.2.2",
+    "eslint-config-mysticatea": "^1.9.0",
+    "eslint-plugin-mysticatea": "^1.0.3",
+    "eslint-plugin-node": "^0.5.0",
     "isparta": "^4.0.0",
     "mocha": "^2.3.4",
     "power-assert": "^1.2.0",
