--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "npm-run-all",
   "version": "1.5.3",
-  "description": "A CLI tool to run multiple npm-scripts in parallel or sequential.",
+  "description": "A CLI tool to run multiple npm-scripts in parallel or sequential / serial.",
   "bin": "bin/npm-run-all.js",
   "files": [
     "bin",
@@ -59,6 +59,7 @@
     "npm-scripts",
     "run",
     "sequential",
+    "serial",
     "parallel",
     "task"
   ],
