--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cross-spawn-async": "^2.1.9",
     "minimatch": "^3.0.0",
     "ps-tree": "^1.0.1",
+    "read-pkg": "^1.1.0",
     "shell-quote": "^1.4.3",
     "string.prototype.padend": "^3.0.0"
   },
