Add `run-s` and `run-p` commands
`npm-run-all` is getting complexity step by step. So I experiment to
separate it to 2 simple commands -- `run-s` and `run-p`.

- `run-s` - Run specific tasks sequentially.
- `run-p` - Run specific tasks in parallel.

Those commands don't have the ability of combinations of parallel and
sequential.

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
     "extends": ["mysticatea/nodejs"],
     "plugins": ["node"],
     "rules": {
+        "no-param-reassign": [2, {"props": false}],
         "node/no-missing-import": 2,
         "node/no-missing-require": 2,
         "node/no-unpublished-import": 2,
