--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "npm-run-all",
   "version": "1.8.0",
   "description": "A CLI tool to run multiple npm-scripts in parallel or sequential / serial.",
-  "bin": "bin/npm-run-all.js",
+  "bin": {
+    "run-p": "bin/run-p/index.js",
+    "run-s": "bin/run-s/index.js",
+    "npm-run-all": "bin/npm-run-all/index.js"
+  },
   "files": [
     "bin",
     "lib",
@@ -13,7 +17,7 @@
     "postversion": "git push && git push --tags",
     "clean": "rimraf bin coverage docs lib",
     "lint": "eslint src test test-workspace",
-    "build": "babel-node src/bin/npm-run-all.js clean lint build:*",
+    "build": "babel-node src/bin/run-s/index.js clean lint build:*",
     "build:babel": "babel src --out-dir .",
     "build:esdoc": "esdoc -c esdoc.json",
     "test": "npm run lint && babel-node node_modules/isparta/bin/isparta cover node_modules/mocha/bin/_mocha -- test/*.js --timeout 60000",
@@ -25,8 +29,10 @@
     "chalk": "^1.1.3",
     "cross-spawn-async": "^2.1.9",
     "minimatch": "^3.0.0",
+    "object-assign": "^4.0.1",
     "ps-tree": "^1.0.1",
     "read-pkg": "^1.1.0",
+    "read-pkg-up": "^1.0.1",
     "shell-quote": "^1.4.3",
     "string.prototype.padend": "^3.0.0"
   },
