--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "bin",
     "lib"
   ],
+  "engines": {
+    "node": ">= 0.10",
+    "npm": ">= 2"
+  },
   "scripts": {
     "preversion": "npm run build",
     "postversion": "git push && git push --tags",
