Docs: switch to jsdoc from esdoc
I have stopped a use of ES2015 Modules, so ESDoc is not working now.

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "preversion": "npm run build",
     "postversion": "git push && git push --tags",
     "pretest": "node scripts/make-slink.js",
-    "clean": "rimraf bin coverage docs lib",
+    "clean": "rimraf bin coverage esdoc lib",
     "lint": "eslint src test \"test-workspace/tasks/*\"",
     "build": "babel-node src/bin/run-s/index.js clean lint build:*",
     "build:babel": "babel src --out-dir .",
-    "build:esdoc": "esdoc -c esdoc.json",
+    "build:jsdoc": "jsdoc -c jsdoc.json",
     "test": "npm run lint && babel-node node_modules/isparta/bin/isparta cover node_modules/mocha/bin/_mocha -- test/*.js --timeout 60000",
     "watch": "mocha test/*.js --require babel-register --timeout 60000 --watch --growl",
     "coveralls": "cat coverage/lcov.info | coveralls"
@@ -49,11 +49,10 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.4.3",
     "coveralls": "^2.11.4",
-    "esdoc": "^0.4.3",
-    "esdoc-importpath-plugin": "^0.0.1",
     "eslint": "^2.9.0",
     "eslint-config-mysticatea": "^3.0.0",
     "isparta": "^4.0.0",
+    "jsdoc": "^3.4.0",
     "mocha": "^2.3.4",
     "power-assert": "^1.2.0",
     "rimraf": "^2.4.4"
