--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
     "root": true,
-    "extends": ["mysticatea", "mysticatea/node"],
+    "extends": ["mysticatea/base", "mysticatea/node"],
+    "parserOptions": {
+        "ecmaVersion": 6
+    },
     "rules": {
         "node/no-unsupported-features": "off"
     },
