--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,6 +1,7 @@
 {
   "env": {"mocha": true},
   "rules": {
-    "max-nested-callbacks": "off"
+    "max-nested-callbacks": "off",
+    "no-console": "off"
   }
 }
