--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
-    "cross-spawn-async": "^2.1.9",
+    "cross-spawn": "^3.0.1",
     "minimatch": "^3.0.0",
     "object-assign": "^4.0.1",
     "pinkie-promise": "^2.0.1",
