Chore: switch to `nyc` from `isparta`

--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "build": "babel-node src/bin/run-s/index.js clean lint build:*",
     "build:babel": "babel src --out-dir .",
     "build:jsdoc": "jsdoc -c jsdoc.json",
-    "test": "npm run lint && babel-node node_modules/isparta/bin/isparta cover node_modules/mocha/bin/_mocha -- test/*.js --reporter progress --timeout 60000",
-    "watch": "mocha test/*.js --require babel-register --timeout 60000 --watch --growl",
-    "coveralls": "cat coverage/lcov.info | coveralls"
+    "test": "npm run lint && nyc --require babel-register mocha \"test/*.js\" --reporter progress --timeout 60000",
+    "watch": "mocha \"test/*.js\" --compilers js:babel-register --timeout 60000 --watch --growl",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "chalk": "^1.1.3",
@@ -50,9 +50,9 @@
     "coveralls": "^2.11.4",
     "eslint": "^2.13.1",
     "eslint-config-mysticatea": "^4.0.0",
-    "isparta": "^4.0.0",
     "jsdoc": "^3.4.0",
     "mocha": "^2.3.4",
+    "nyc": "^7.1.0",
     "power-assert": "^1.2.0",
     "rimraf": "^2.4.4"
   },
