--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "string.prototype.padend": "^3.0.0"
   },
   "devDependencies": {
+    "@types/node": "^6.0.51",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
     "babel-plugin-espower": "^2.0.0",
