--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chalk": "^1.1.3",
     "cross-spawn": "^4.0.0",
     "minimatch": "^3.0.2",
+    "npm": "^4.0.5",
     "object-assign": "^4.0.1",
     "pinkie-promise": "^2.0.1",
     "ps-tree": "^1.0.1",
