--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 /.nyc_output
-/bin
 /coverage
 /jsdoc
-/lib
 /node_modules
-/npm-debug.log
 /test-workspace/tasks/lib
-/test-workspace/npm-debug.log
 /test-workspace/test.txt
 /test.js
+npm-debug.log
