--- a/package.json
+++ b/package.json
@@ -50,10 +50,7 @@
     "power-assert": "^1.2.0",
     "rimraf": "^2.4.4"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mysticatea/npm-run-all.git"
-  },
+  "repository": "mysticatea/npm-run-all",
   "keywords": [
     "cli",
     "command",
