--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "postversion": "git push && git push --tags",
     "test": "nyc npm run _mocha",
     "watch": "npm run _mocha -- --watch --growl",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "codecov": "nyc report -r lcovonly && codecov"
   },
   "dependencies": {
     "chalk": "^1.1.3",
@@ -40,7 +40,7 @@
     "@types/node": "^4.0.30",
     "babel-preset-power-assert": "^1.0.0",
     "babel-register": "^6.4.3",
-    "coveralls": "^2.11.4",
+    "codecov": "^1.0.1",
     "eslint": "^3.12.2",
     "eslint-config-mysticatea": "^7.0.1",
     "jsdoc": "^3.4.0",
