--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "cross-spawn": "^5.0.1",
+    "memory-streams": "^0.1.2",
     "minimatch": "^3.0.2",
     "ps-tree": "^1.0.1",
     "read-pkg": "^2.0.0",
