Chore: use async/await in tests

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
     "presets": ["power-assert"],
+    "plugins": ["transform-async-to-generator"],
     "only": "/test/*.js",
     "sourceMaps": "inline"
 }
