--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": ">= 4"
   },
   "scripts": {
-    "_mocha": "mocha \"test/*.js\" --compilers js:babel-register --timeout 60000",
+    "_mocha": "mocha \"test/*.js\" --require babel-register --timeout 60000",
     "clean": "rimraf .nyc_output coverage jsdoc \"test-workspace/{build,test.txt}\"",
     "docs": "jsdoc -c jsdoc.json",
     "lint": "eslint bin lib scripts test \"test-workspace/tasks/*.js\"",
@@ -48,7 +48,7 @@
     "eslint": "^4.5.0",
     "eslint-config-mysticatea": "^12.0.0",
     "jsdoc": "^3.5.4",
-    "mocha": "^3.5.0",
+    "mocha": "^4.0.1",
     "nyc": "^11.1.0",
     "power-assert": "^1.4.4",
     "rimraf": "^2.6.1"
