Replace memory-streams package for memorystream

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ansi-styles": "^3.2.0",
     "chalk": "^2.1.0",
     "cross-spawn": "^5.1.0",
-    "memory-streams": "^0.1.2",
+    "memorystream": "^0.3.1",
     "minimatch": "^3.0.4",
     "ps-tree": "^1.1.0",
     "read-pkg": "^2.0.0",
