--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "codecov": "^2.3.0",
     "eslint": "^4.5.0",
     "eslint-config-mysticatea": "^12.0.0",
+    "fs-extra": "^4.0.2",
     "jsdoc": "^3.5.4",
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
+    "p-queue": "^2.2.0",
     "power-assert": "^1.4.4",
     "rimraf": "^2.6.1",
     "yarn": "^1.2.1"
